--- a/Dockerfile_PaymentService
+++ b/Dockerfile_PaymentService
@@ -13,6 +13,7 @@ RUN go mod download
 # Copy the source code and generated protobuf code
 COPY paymentservice/ ./paymentservice/
 COPY generated/ ./generated/
+COPY etrace/ ./etrace/
 
 # Build the binary
 RUN CGO_ENABLED=0 GOOS=linux go build -o payment_service_server ./paymentservice/cmd/main.go
