--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
       - "50051:50051"
     networks:
       - services_network
+    environment:
+      - OTEL_EXPORTER_JAEGER_ENDPOINT=http://jaeger:14268/api/traces
 
   payment_service_server:
     build:
@@ -16,6 +18,17 @@ services:
       dockerfile: Dockerfile_PaymentService
     ports:
       - "50052:50052"
+    networks:
+      - services_network
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "16686:16686"
+      - "14268:14268"
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+      - LOG_LEVEL=debug
     networks:
       - services_network
 
